# client-sdk/model_get_deployment_output_body.go
@@ -1,0 +1,464 @@
+/*
+Internet Golf API
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 0.5.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package golfsdk
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the GetDeploymentOutputBody type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &GetDeploymentOutputBody{}
+
+// GetDeploymentOutputBody struct for GetDeploymentOutputBody
+type GetDeploymentOutputBody struct {
+	// A URL to the JSON Schema for this object.
+	Schema *string `json:"$schema,omitempty"`
+	ExternalSource *string `json:"externalSource,omitempty"`
+	ExternalSourceType *string `json:"externalSourceType,omitempty"`
+	HasContent bool `json:"hasContent"`
+	Name *string `json:"name,omitempty"`
+	PreserveExternalPath *bool `json:"preserveExternalPath,omitempty"`
+	ServedThing string `json:"servedThing"`
+	ServedThingType string `json:"servedThingType"`
+	Tags []string `json:"tags,omitempty"`
+	Urls []Url `json:"urls"`
+}
+
+type _GetDeploymentOutputBody GetDeploymentOutputBody
+
+// NewGetDeploymentOutputBody instantiates a new GetDeploymentOutputBody object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewGetDeploymentOutputBody(hasContent bool, servedThing string, servedThingType string, urls []Url) *GetDeploymentOutputBody {
+	this := GetDeploymentOutputBody{}
+	this.HasContent = hasContent
+	this.ServedThing = servedThing
+	this.ServedThingType = servedThingType
+	this.Urls = urls
+	return &this
+}
+
+// NewGetDeploymentOutputBodyWithDefaults instantiates a new GetDeploymentOutputBody object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewGetDeploymentOutputBodyWithDefaults() *GetDeploymentOutputBody {
+	this := GetDeploymentOutputBody{}
+	return &this
+}
+
+// GetSchema returns the Schema field value if set, zero value otherwise.
+func (o *GetDeploymentOutputBody) GetSchema() string {
+	if o == nil || IsNil(o.Schema) {
+		var ret string
+		return ret
+	}
+	return *o.Schema
+}
+
+// GetSchemaOk returns a tuple with the Schema field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *GetDeploymentOutputBody) GetSchemaOk() (*string, bool) {
+	if o == nil || IsNil(o.Schema) {
+		return nil, false
+	}
+	return o.Schema, true
+}
+
+// HasSchema returns a boolean if a field has been set.
+func (o *GetDeploymentOutputBody) HasSchema() bool {
+	if o != nil && !IsNil(o.Schema) {
+		return true
+	}
+
+	return false
+}
+
+// SetSchema gets a reference to the given string and assigns it to the Schema field.
+func (o *GetDeploymentOutputBody) SetSchema(v string) {
+	o.Schema = &v
+}
+
+// GetExternalSource returns the ExternalSource field value if set, zero value otherwise.
+func (o *GetDeploymentOutputBody) GetExternalSource() string {
+	if o == nil || IsNil(o.ExternalSource) {
+		var ret string
+		return ret
+	}
+	return *o.ExternalSource
+}
+
+// GetExternalSourceOk returns a tuple with the ExternalSource field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *GetDeploymentOutputBody) GetExternalSourceOk() (*string, bool) {
+	if o == nil || IsNil(o.ExternalSource) {
+		return nil, false
+	}
+	return o.ExternalSource, true
+}
+
+// HasExternalSource returns a boolean if a field has been set.
+func (o *GetDeploymentOutputBody) HasExternalSource() bool {
+	if o != nil && !IsNil(o.ExternalSource) {
+		return true
+	}
+
+	return false
+}
+
+// SetExternalSource gets a reference to the given string and assigns it to the ExternalSource field.
+func (o *GetDeploymentOutputBody) SetExternalSource(v string) {
+	o.ExternalSource = &v
+}
+
+// GetExternalSourceType returns the ExternalSourceType field value if set, zero value otherwise.
+func (o *GetDeploymentOutputBody) GetExternalSourceType() string {
+	if o == nil || IsNil(o.ExternalSourceType) {
+		var ret string
+		return ret
+	}
+	return *o.ExternalSourceType
+}
+
+// GetExternalSourceTypeOk returns a tuple with the ExternalSourceType field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *GetDeploymentOutputBody) GetExternalSourceTypeOk() (*string, bool) {
+	if o == nil || IsNil(o.ExternalSourceType) {
+		return nil, false
+	}
+	return o.ExternalSourceType, true
+}
+
+// HasExternalSourceType returns a boolean if a field has been set.
+func (o *GetDeploymentOutputBody) HasExternalSourceType() bool {
+	if o != nil && !IsNil(o.ExternalSourceType) {
+		return true
+	}
+
+	return false
+}
+
+// SetExternalSourceType gets a reference to the given string and assigns it to the ExternalSourceType field.
+func (o *GetDeploymentOutputBody) SetExternalSourceType(v string) {
+	o.ExternalSourceType = &v
+}
+
+// GetHasContent returns the HasContent field value
+func (o *GetDeploymentOutputBody) GetHasContent() bool {
+	if o == nil {
+		var ret bool
+		return ret
+	}
+
+	return o.HasContent
+}
+
+// GetHasContentOk returns a tuple with the HasContent field value
+// and a boolean to check if the value has been set.
+func (o *GetDeploymentOutputBody) GetHasContentOk() (*bool, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.HasContent, true
+}
+
+// SetHasContent sets field value
+func (o *GetDeploymentOutputBody) SetHasContent(v bool) {
+	o.HasContent = v
+}
+
+// GetName returns the Name field value if set, zero value otherwise.
+func (o *GetDeploymentOutputBody) GetName() string {
+	if o == nil || IsNil(o.Name) {
+		var ret string
+		return ret
+	}
+	return *o.Name
+}
+
+// GetNameOk returns a tuple with the Name field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *GetDeploymentOutputBody) GetNameOk() (*string, bool) {
+	if o == nil || IsNil(o.Name) {
+		return nil, false
+	}
+	return o.Name, true
+}
+
+// HasName returns a boolean if a field has been set.
+func (o *GetDeploymentOutputBody) HasName() bool {
+	if o != nil && !IsNil(o.Name) {
+		return true
+	}
+
+	return false
+}
+
+// SetName gets a reference to the given string and assigns it to the Name field.
+func (o *GetDeploymentOutputBody) SetName(v string) {
+	o.Name = &v
+}
+
+// GetPreserveExternalPath returns the PreserveExternalPath field value if set, zero value otherwise.
+func (o *GetDeploymentOutputBody) GetPreserveExternalPath() bool {
+	if o == nil || IsNil(o.PreserveExternalPath) {
+		var ret bool
+		return ret
+	}
+	return *o.PreserveExternalPath
+}
+
+// GetPreserveExternalPathOk returns a tuple with the PreserveExternalPath field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *GetDeploymentOutputBody) GetPreserveExternalPathOk() (*bool, bool) {
+	if o == nil || IsNil(o.PreserveExternalPath) {
+		return nil, false
+	}
+	return o.PreserveExternalPath, true
+}
+
+// HasPreserveExternalPath returns a boolean if a field has been set.
+func (o *GetDeploymentOutputBody) HasPreserveExternalPath() bool {
+	if o != nil && !IsNil(o.PreserveExternalPath) {
+		return true
+	}
+
+	return false
+}
+
+// SetPreserveExternalPath gets a reference to the given bool and assigns it to the PreserveExternalPath field.
+func (o *GetDeploymentOutputBody) SetPreserveExternalPath(v bool) {
+	o.PreserveExternalPath = &v
+}
+
+// GetServedThing returns the ServedThing field value
+func (o *GetDeploymentOutputBody) GetServedThing() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.ServedThing
+}
+
+// GetServedThingOk returns a tuple with the ServedThing field value
+// and a boolean to check if the value has been set.
+func (o *GetDeploymentOutputBody) GetServedThingOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.ServedThing, true
+}
+
+// SetServedThing sets field value
+func (o *GetDeploymentOutputBody) SetServedThing(v string) {
+	o.ServedThing = v
+}
+
+// GetServedThingType returns the ServedThingType field value
+func (o *GetDeploymentOutputBody) GetServedThingType() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.ServedThingType
+}
+
+// GetServedThingTypeOk returns a tuple with the ServedThingType field value
+// and a boolean to check if the value has been set.
+func (o *GetDeploymentOutputBody) GetServedThingTypeOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.ServedThingType, true
+}
+
+// SetServedThingType sets field value
+func (o *GetDeploymentOutputBody) SetServedThingType(v string) {
+	o.ServedThingType = v
+}
+
+// GetTags returns the Tags field value if set, zero value otherwise (both if not set or set to explicit null).
+func (o *GetDeploymentOutputBody) GetTags() []string {
+	if o == nil {
+		var ret []string
+		return ret
+	}
+	return o.Tags
+}
+
+// GetTagsOk returns a tuple with the Tags field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+// NOTE: If the value is an explicit nil, `nil, true` will be returned
+func (o *GetDeploymentOutputBody) GetTagsOk() ([]string, bool) {
+	if o == nil || IsNil(o.Tags) {
+		return nil, false
+	}
+	return o.Tags, true
+}
+
+// HasTags returns a boolean if a field has been set.
+func (o *GetDeploymentOutputBody) HasTags() bool {
+	if o != nil && !IsNil(o.Tags) {
+		return true
+	}
+
+	return false
+}
+
+// SetTags gets a reference to the given []string and assigns it to the Tags field.
+func (o *GetDeploymentOutputBody) SetTags(v []string) {
+	o.Tags = v
+}
+
+// GetUrls returns the Urls field value
+// If the value is explicit nil, the zero value for []Url will be returned
+func (o *GetDeploymentOutputBody) GetUrls() []Url {
+	if o == nil {
+		var ret []Url
+		return ret
+	}
+
+	return o.Urls
+}
+
+// GetUrlsOk returns a tuple with the Urls field value
+// and a boolean to check if the value has been set.
+// NOTE: If the value is an explicit nil, `nil, true` will be returned
+func (o *GetDeploymentOutputBody) GetUrlsOk() ([]Url, bool) {
+	if o == nil || IsNil(o.Urls) {
+		return nil, false
+	}
+	return o.Urls, true
+}
+
+// SetUrls sets field value
+func (o *GetDeploymentOutputBody) SetUrls(v []Url) {
+	o.Urls = v
+}
+
+func (o GetDeploymentOutputBody) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o GetDeploymentOutputBody) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Schema) {
+		toSerialize["$schema"] = o.Schema
+	}
+	if !IsNil(o.ExternalSource) {
+		toSerialize["externalSource"] = o.ExternalSource
+	}
+	if !IsNil(o.ExternalSourceType) {
+		toSerialize["externalSourceType"] = o.ExternalSourceType
+	}
+	toSerialize["hasContent"] = o.HasContent
+	if !IsNil(o.Name) {
+		toSerialize["name"] = o.Name
+	}
+	if !IsNil(o.PreserveExternalPath) {
+		toSerialize["preserveExternalPath"] = o.PreserveExternalPath
+	}
+	toSerialize["servedThing"] = o.ServedThing
+	toSerialize["servedThingType"] = o.ServedThingType
+	if o.Tags != nil {
+		toSerialize["tags"] = o.Tags
+	}
+	if o.Urls != nil {
+		toSerialize["urls"] = o.Urls
+	}
+	return toSerialize, nil
+}
+
+func (o *GetDeploymentOutputBody) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"hasContent",
+		"servedThing",
+		"servedThingType",
+		"urls",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varGetDeploymentOutputBody := _GetDeploymentOutputBody{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varGetDeploymentOutputBody)
+
+	if err != nil {
+		return err
+	}
+
+	*o = GetDeploymentOutputBody(varGetDeploymentOutputBody)
+
+	return err
+}
+
+type NullableGetDeploymentOutputBody struct {
+	value *GetDeploymentOutputBody
+	isSet bool
+}
+
+func (v NullableGetDeploymentOutputBody) Get() *GetDeploymentOutputBody {
+	return v.value
+}
+
+func (v *NullableGetDeploymentOutputBody) Set(val *GetDeploymentOutputBody) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableGetDeploymentOutputBody) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableGetDeploymentOutputBody) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableGetDeploymentOutputBody(val *GetDeploymentOutputBody) *NullableGetDeploymentOutputBody {
+	return &NullableGetDeploymentOutputBody{value: val, isSet: true}
+}
+
+func (v NullableGetDeploymentOutputBody) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableGetDeploymentOutputBody) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
